RESOLVED FIXED205066
[GStreamer][MediaStream] Fix GStreamer capturer mock
https://bugs.webkit.org/show_bug.cgi?id=205066
Summary [GStreamer][MediaStream] Fix GStreamer capturer mock
Thibault Saunier
Reported 2019-12-10 09:44:24 PST
- Presets where wrongly generated based on GStreamer capabilities - Audio capturer was not taking into account echo cancellation
Attachments
Patch (12.13 KB, patch)
2019-12-10 10:24 PST, Thibault Saunier
no flags
Patch (11.52 KB, patch)
2019-12-10 13:11 PST, Thibault Saunier
no flags
Patch (11.52 KB, patch)
2019-12-11 04:02 PST, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2019-12-10 10:24:43 PST
Philippe Normand
Comment 2 2019-12-10 10:37:03 PST
EWS is red. Patch needs a rebase it seems.
Thibault Saunier
Comment 3 2019-12-10 13:11:44 PST
Philippe Normand
Comment 4 2019-12-10 13:22:40 PST
*** Bug 199440 has been marked as a duplicate of this bug. ***
Thibault Saunier
Comment 5 2019-12-11 04:02:52 PST
Philippe Normand
Comment 6 2019-12-11 04:22:42 PST
So what changed here since I r+'ed?
Thibault Saunier
Comment 7 2019-12-11 05:18:39 PST
(In reply to Philippe Normand from comment #6) > So what changed here since I r+'ed? Nothing, but the CI failed and I had to make it run again, in that case how could I avoided to loose the r+?
Philippe Normand
Comment 8 2019-12-11 05:21:08 PST
Add the "Reviewed by..." in the ChangeLog and re-upload the patch asking only for "cq?" :)
WebKit Commit Bot
Comment 9 2019-12-11 06:04:56 PST
Comment on attachment 385378 [details] Patch Clearing flags on attachment: 385378 Committed r253368: <https://trac.webkit.org/changeset/253368>
WebKit Commit Bot
Comment 10 2019-12-11 06:04:58 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2019-12-11 06:05:28 PST
Note You need to log in before you can comment on or make changes to this bug.