[GStreamer][MediaStream] Fix GStreamer capturer mock https://bugs.webkit.org/show_bug.cgi?id=205066

- Presets where wrongly generated based on GStreamer capabilities
- Audio capturer was not taking into account echo cancellation

Patch by Thibault Saunier <tsaunier@igalia.com> on 2019-12-11
Reviewed by Philippe Normand.

Source/WebCore:

This fixes a few tests

* platform/mediastream/RealtimeVideoCaptureSource.h:
(WebCore::RealtimeVideoCaptureSource::canResizeVideoFrames const):
* platform/mediastream/gstreamer/GStreamerVideoCaptureSource.h:
* platform/mediastream/gstreamer/MockGStreamerAudioCaptureSource.cpp:
(WebCore::WrappedMockRealtimeAudioSource::addHum):
* platform/mediastream/gstreamer/MockGStreamerVideoCaptureSource.cpp:
(WebCore::WrappedMockRealtimeVideoSource::presets):
(WebCore::MockGStreamerVideoCaptureSource::generatePresets):
* platform/mediastream/gstreamer/MockGStreamerVideoCaptureSource.h:
* platform/mock/MockRealtimeVideoSource.h:

LayoutTests:

* platform/gtk/TestExpectations: Updated expectations as required
* platform/wpe/TestExpectations: Updated expectations as required

Canonical link: https://commits.webkit.org/218308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253368 268f45cc-cd09-0410-ab3c-d52691b4dbfc